fullscreen added to all html games

--- a/uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/css/siteMain.css
+++ b/uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/css/siteMain.css
@@ -2422,6 +2422,20 @@ Start of custom Webflow CSS
 	border-radius: 20px;
 	background-color: #740000;
 }
+.button {
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+  }
+  
+  .button1 {background-color: #bb1313;} /* red */
+  .button2 {background-color: #008CBA;} /* Blue */
 
 @media screen and (max-width: 991px) {
 	.cards-grid-container {
