--- a/uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/css/siteMain.css
+++ b/uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/css/siteMain.css
@@ -12,8 +12,8 @@ html {
 
   .boxed {
 	border: 7px groove #D60000;
-	margin-left: 450px;
-	margin-right: 450px;
+	margin-left:25%;
+	margin-right: 25%;
   }
 
 
